--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rinworks.nikos.fuelfullpaliwoikoszty">
     <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission-sdk-23 android:name="android.permission.SET_ALARM"/>
 
 
     <application
@@ -19,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".NotificationGenerator.clickedActivity"/>
+        <receiver android:name=".NotificationGenerator.NotificationReciver"/>
     </application>
 
 </manifest>
